# SHIELD

./: .gitignore  README.md  pyproject.toml  requirements.txt
ShIeLD/: Plots_paper.ipynb  create_attention_score_interactions.py  create_graphs.py  create_graphs_batches.py  data_class.py  data_preprocessing.py  data_preprosessing.py  evaluate_hypersearch.py  model.py  pytest.ini  run_attenion_evaluation.py  run_training.py  train_baselineModels.py  train_largerBaselineModel.py  train_model.py
ShIeLD/archiv/: data_preprocessing.py  run_attenion_evaluation.py  run_training.py
ShIeLD/examples/: README.md  best_perfoming_model.ipynb  data_set_propertiers_JSON.ipynb
ShIeLD/tests/: conftest.py  input_test.py
ShIeLD/tests/data/: data_set_properties_test.ipynb  requirements.pt  requirements_bucket.pt  requirements_voronoi.pt  shield_test.csv
ShIeLD/tests/integration/: test_attention_score_interactions.py  test_evaluate_hypersearch.py  test_graph_building.py  test_train_model.py
ShIeLD/utils/: data_class.py  data_utils.py  evaluation_utils.py  model_utils.py  optuna_utils.py  testing.py  train_utils.py
