[tool.poetry]
name = "ShIeLD"
version = "0.2.0"
description = "SHIELD is a single-layer Graph Attention Network for systematic and interpretable inference of disease-associated cell-cell interactions from multiplexed tissue imaging data.Designed for weakly supervised classification tasks, SHIELD quantifies interaction relevance via attention scoresenabling post hoc biologically meaningful interpretation without predefined cell-type assumptions. Validated in HCC and T1D datasets, it offers robust, scalable insights into immune spatial dynamics."
authors = ["V-Sehra"]

[tool.poetry.dependencies]
python = "^3.8"  
pandas = "^1.2.3"  
torch = "^1.8.0"  
torch-geometric = "^1.7.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["ShIeLD/tests"]
markers = [
  "integration: slow-ish integration tests",
  "unit: fast tests",
]